--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ body {
     font-family: 'Rubik', sans-serif;
 }
 
+a {
+    font-weight: bolder;
+    text-decoration: none;
+    color:white;
+    transition: all 0.3s ease;
+    font-size: 2rem;
+    margin-left: 0.2rem;
+}  
+
+a:hover {
+    color: rgb(50, 104, 33);
+    text-decoration: underline;
+}
+
+
 nav ul {
     /* width: 100vw; */
     position: fixed;
@@ -123,24 +138,7 @@ nav ul li a:hover {
     transition: 1s;
 }
 
-/* --- RESPONSIVIDADE --- */
-@media (max-width: 820px) {
-    .menu-desktop ul li:not(:has(#logo)) {
-        display: none;
-    }
 
-    .menu-desktop ul {
-        height: 95px;
-    }
-
-    .menu-desktop ul li:has(#logo) {
-        transform: translateX(-33vw);
-    }
-
-    .botao-hamburger {
-        display: block;
-    }
-}
 
 /* Mostrar menu quando marcado */
 #check-de-menu:checked ~ .menu-mobile {
@@ -196,10 +194,6 @@ nav ul li a:hover {
     /* height: 100dvh; */
     background-size: contain;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
     padding: 20vh 0;
 }
 
@@ -212,28 +206,86 @@ nav ul li a:hover {
 }
 
 #fundo-ventre {
-    background-image: url(imagens/FundoVentre.png);
+    background-image: url(imagens/FundoCordash.png);
     /* height: 100dvh; */
-    background-size: cover;
-    background-position: 0 -120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* background-position: 0 -120px; */
     /* justify-content: center; */
     padding: 20vh 0;
     transition: 1s;
 }
+    
+#fundo-section-sexa {
+    background-color: antiquewhite;
+    background-image: url(imagens/croppadodossexa.png);
+    height: 100dvh;
+    background-position: 50%;
+    background-size: 100% 100%;
+}
+
+#fundo-sexa {
+    background-image: url(imagens/vintage-hintergrund-pergament-grun.jpg);
+    /* height: 100dvh; */
+    /* background-position: 0 -120px; */
+    /* justify-content: center; */
+    background-size: 100% 100%;
+    padding: 20vh 0;
+    transition: 1s;
+}
+
+#fundo-section-vale {
+    background-color: antiquewhite;
+    background-image: url(imagens/bananal.png);
+    height: 100dvh;
+    background-position: 50%;
+    background-size: 100% 100%;
+}
+
+#fundo-vale {
+    background-image: url(imagens/tecido.png);
+    /* height: 100dvh; */
+    background-position: 50% 120%;
+    /* justify-content: center; */
+    background-size: contain;
+    padding: 20vh 0;
+    transition: 1s;
+}
+
+
+
+.secao {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
 
 h1 {
     font-family: "Playfair Display", serif;
-    font-size: 3.5em;
+    font-size: 3.9em;
     transition: 1s;
     margin-bottom: 1em;
 
     color: #111111;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
     text-align: center;
-    /* text-wrap: wrap; */
+    text-shadow: 0px 0px 10px #229104;
+    animation: brilhop 2s ease-in-out infinite alternate;
+}
+
+.deg1 {
+    animation: brilhop 2s ease-in-out infinite alternate;
+}
+
+.deg2 {
+    animation: brilhoc 2s ease-in-out infinite alternate;
+}
+
+.deg3 {
+    animation: brilhov 2s ease-in-out infinite alternate;
+}
+
+.deg4 {
+  animation: brilhoS 2s ease-in-out infinite alternate;  
 }
 
 h1:hover {
@@ -244,10 +296,67 @@ h1:hover {
 }
 
 h2 {
-    text-align: center;
-    font-size: 1.7em;
+    font-family: "Playfair Display", serif;
+    font-size: 3em;
+    transition: 1s;
+    margin-bottom: 1em;
+
     color: #111111;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+    text-align: center;
+    text-shadow: 0px 0px 10px #229104;
+    animation: brilho 2s ease-in-out infinite alternate;
+}
+
+h2:hover {
+    background: rgba(0, 0, 0, 0.35);
+    padding: 10px 20px;
+    border-radius: 6px;
+    color: #ffffff
+}
+
+@keyframes brilhop {
+    0% {
+        scale: 1;
+        text-shadow: 0px 0px 10px #229104;
+    }
+    100% {
+        scale: 1.01;
+        text-shadow: 0px 0px 15px #FFE55C;
+    }
+}
+
+@keyframes brilhoc {
+    0% {
+        scale: 1;
+        text-shadow: 0px 0px 10px #da6161;
+    }
+    100% {
+        scale: 1.01;
+        text-shadow: 0px 0px 15px #5cb0ff;
+    }
+}
+
+@keyframes brilhov {
+    0% {
+        scale: 1;
+        text-shadow: 0px 0px 10px #ff932e;
+    }
+    100% {
+        scale: 1.01;
+        text-shadow: 0px 0px 15px #c0ff9c;
+    }
+}
+
+@keyframes brilhoS {
+    0% {
+        scale: 1;
+        text-shadow: 0px 0px 10px #28ffdb;
+    }
+    100% {
+        scale: 1.01;
+        text-shadow: 0px 0px 15px #ba9cff;
+    }
 }
 
 h3 {
@@ -271,26 +380,187 @@ section {
     /* align-items: center; */
 }
 
-article {
-    background-color:#d9c697;
-    padding: 40px 60px;
-    max-width: 1400px;
-    width: 90%;
-    border-radius: 12px;
+footer {
+    background-color: #002A24;
+    padding: 20px 0;
+    text-align: center;
+    color: #ffffff;
+    font-size: 1em;
+    margin: 0;
+}
+
+
+/* article {
+    position: relative;
+    background-image: url(imagens/width_708.webp);
+    padding: 21vw 16vw;
+    background-position: center;
+    background-size: cover;
+    min-width: 100vw;
+    max-width: 100vw;
+    border-radius: 34px;
     font-size: 1.2em;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* Sombras ficam bonitas :) */
-    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    /* box-shadow: 0 0 60px 45px rgba(0,0,0,0.3); */
+
+    /* transition: 1s; 
+}*/
+
+article {
+    /* font-size: clamp(0.9em, 2.5vw, 1.2em); */
+    background-image: url(imagens/width_708.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    padding: 300px 200px;
+    max-width: 800px;           /* Ajuste a largura ideal do "post-it" */
+    /* margin: 0 auto 30px auto; */
 
     transition: 1s;
 }
 
-p {
-    margin-bottom: 30px;
+article p {
+    max-width: 800px;  
+    margin: 0;
+    transition: 1s;
+}
+
+article p {
+    font-size: clamp(0.9em, 2.5vw, 1.2em);
+}
+
+figure {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    transition: 0.3s ease; 
+}
+
+figcaption {
+    position: absolute;
+    bottom: -30px ;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 90%;
+    padding: 10px 0;
+    height: auto;
+
+    border-radius: 0px 0px 30px 40px;
+    text-align: center;
+    backdrop-filter: blur(100px);
+
+    font-size: 70%;
+    transition: 0.3s ease;
+}
+
+figure img{
+    width: 52vw;
+    align-self: center;
+    justify-self: center;
+    border-radius: 60px;
+    box-shadow: 0px 0px 50px 25px rgba(0,0,0,0.5);
+}
+
+figure:hover{
+    transform: rotateZ(3deg);
+    scale: 1.05;
 }
 
 
+@media (max-width: 1600px) {
+    figure img {
+        width: 80vw;
+    }
+}
+
+@media (max-width: 800px) {
+    figure img {
+        width: 90vw;
+    }
+}
+
+@media (max-width: 610px) {
+    article {
+        padding: 230px 120px;
+    }
+}
+
+@media (max-width: 463px) {
+    article {
+        padding: 10px 100px;
+        background-size: contain;
+    }
+
+    p {
+        
+        padding: 120px 0px;
+        
+    }
+}
+
+@media (max-width: 440px) {
+    article {
+        padding: 0px 90px;
+        background-size: contain;
+    }
+
+    p {
+        
+        padding: 120px 0px;
+        
+    }
+}
+
+@media (max-width: 419px) {
+    article {
+        padding: 0px 80px;
+        background-size: contain;
+    }
+
+    p {
+        
+        padding: 120px 0px;
+        
+    }
+}
+
+@media (max-width: 400px) {
+    article {
+        padding: 0px 70px;
+        background-size: contain;
+    }
+
+    p {
+        
+        padding: 120px 0px;
+        
+    }
+}
 
 
+/* --- RESPONSIVIDADE --- */
+@media (max-width: 820px) {
+    .menu-desktop ul li:not(:has(#logo)) {
+        display: none;
+    }
+
+    .menu-desktop ul {
+        height: 95px;
+    }
+
+    .menu-desktop ul li:has(#logo) {
+        transform: translateX(-33vw);
+    }
+
+    .botao-hamburger {
+        display: block;
+    }
+}
 
 /* .cortando {
     font-style: oblique;
