--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ nav ul li a:hover {
     background-color: #014036;
 }
 
-/* --- MENU MOBILE --- */
 .menu-mobile {
     position: fixed;
     top: 0;
@@ -111,7 +110,7 @@ nav ul li a:hover {
     justify-content: center;
 }
 
-/* --- BOTÃO HAMBÚRGUER --- */
+
 .botao-hamburger {
     position: fixed;
     top: 20px;
@@ -120,7 +119,7 @@ nav ul li a:hover {
     color: white;
     background: none;
     border: none;
-    display: none;        /* só aparece no mobile */
+    display: none;   
     cursor: pointer;
     z-index: 1001;
     transition: all 1s ease;
@@ -140,7 +139,7 @@ nav ul li a:hover {
 
 
 
-/* Mostrar menu quando marcado */
+
 #check-de-menu:checked ~ .menu-mobile {
     right: 0%;
 }
@@ -155,8 +154,8 @@ nav ul li a:hover {
 #logo {
     align-self: center;
     justify-self: center;
-    height: 50px; /* mesma altura aproximada dos textos (ajuste se quiser) */
-    width: auto;  /* mantém a proporção */
+    height: 50px; 
+    width: auto;  
     transition: 1s;
     transform: translateY(-0px) scale(1.5);
 }
@@ -417,7 +416,7 @@ article {
     background-position: center;
 
     padding: 300px 200px;
-    max-width: 800px;           /* Ajuste a largura ideal do "post-it" */
+    max-width: 800px;
     /* margin: 0 auto 30px auto; */
 
     transition: 1s;
@@ -543,7 +542,6 @@ figure:hover{
 }
 
 
-/* --- RESPONSIVIDADE --- */
 @media (max-width: 820px) {
     .menu-desktop ul li:not(:has(#logo)) {
         display: none;
@@ -582,4 +580,5 @@ figure:hover{
 @keyframes riscando {
     from { width: 0%; }
     to { width: 100%; }
+
 } */
